--- a/pug/index.pug
+++ b/pug/index.pug
@@ -7,57 +7,58 @@ head
   link(rel='stylesheet' href='public/css/style.css')
 body 
   header
-    .container.overflow-hidden
-      a.icon-menu(href="#") menu
-      h1
-        a(href='index.html') My Portfolio
-      nav
-        ul
-          li
-            a(href='#') 關於作者
-          li
-            a(href='design-list.html') 平面作品
-          li
-            a(href='deslign-list2.html') 網頁作品
-          li
-            a(href='#') 連絡作者
+    .container
+      .row.flex-space-between
+        h1
+          a(href='index.html') My Portfolio
+        a.icon-menu(href="#") menu
+        nav
+          ul
+            li
+              a(href='#') 關於作者
+            li
+              a(href='design-list.html') 平面作品
+            li
+              a(href='deslign-list2.html') 網頁作品
+            li
+              a(href='#') 連絡作者
   // ===============頁首結尾==========================
   img.img-fluid(src='https://picsum.photos/1920/550' alt='')
   // =====================content start===================================
   .container
     h2 最新作品
     .row
-      .col-6.col-md-4
+      .col-12.col-md-4
         a(href='')
           img.img-fluid.img-rounded(src='https://placekitten.com/300/300' alt='')
         p.title.text-center
           a(href='') 標題1
         p.date.text-center 2022-06-15
-      .col-6.col-md-4
+      .col-12.col-md-4
         a(href='')
           img.img-fluid.img-rounded(src='https://placekitten.com/300/300' alt='')
         p.title.text-center
           a(href='') 標題2
         p.date.text-center 2022-06-15
-      .col-6.col-md-4
+      .col-12.col-md-4
         a(href='')
           img.img-fluid.img-rounded(src='https://placekitten.com/300/300' alt='')
         p.title.text-center
           a(href='') 標題3
         p.date.text-center 2022-06-15
-      .col-6.col-md-4
+      .col-12.col-md-4
         a(href='')
           img.img-fluid.img-rounded(src='https://placekitten.com/300/300' alt='')
         p.title.text-center
           a(href='') 標題4
         p.date.text-center 2022-06-15
-      .col-6.col-md-4
+      .col-12.col-md-4
         a(href='')
           img.img-fluid.img-rounded(src='https://placekitten.com/300/300' alt='')
         p.title.text-center
           a(href='') 標題5
         p.date.text-center 2022-06-15
-      .col-6.col-md-4
+      .col-12.col-md-4
         a(href='')
           img.img-fluid.img-rounded(src='https://placekitten.com/300/300' alt='')
         p.title.text-center
