--- a/pug/index.pug
+++ b/pug/index.pug
@@ -17,9 +17,19 @@ body
             li
               a(href='#') 關於作者
             li
-              a(href='design-list.html') 平面作品
+              a(href='#') 平面作品
+              ul.submenu
+                li 
+                  a(href="design-list.html") 品牌設計
+                li 
+                  a(href="design-list.html") 包裝設計 
             li
-              a(href='deslign-list2.html') 網頁作品
+              a(href='#') 網頁作品
+              ul.submenu
+                li 
+                  a(href="deslign-list2.html") 品牌設計
+                li 
+                  a(href="deslign-list2.html") 包裝設計 
             li
               a(href='#') 連絡作者
   // ===============頁首結尾==========================
